--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
+    "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^6.11.0",
     "styled-components": "^5.3.10",
     "zod": "^3.21.4"
