--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hot-toast": "^2.4.1",
     "react-multi-carousel": "^2.8.3",
     "react-router-dom": "^6.11.0",
+    "reactjs-flip-card": "^2.0.2",
     "styled-components": "^5.3.10",
     "zod": "^3.21.4"
   },
